--- a/config/default/controllers.yaml
+++ b/config/default/controllers.yaml
@@ -4,6 +4,7 @@ Se3Controller:
   eland_threshold: 1.5 # [m], position error triggering eland
   failsafe_threshold: 2.5 # [m], position error triggering failsafe land
   odometry_innovation_threshold: 1.5 # [m], position odometry innovation threshold
+  human_switchable: true
 
 MpcController:
   address: "mrs_uav_controllers/MpcController"
@@ -11,6 +12,7 @@ MpcController:
   eland_threshold: 2.0 # [m], position error triggering eland
   failsafe_threshold: 3.0 # [m], position error triggering failsafe land
   odometry_innovation_threshold: 2.0 # [m], position odometry innovation threshold
+  human_switchable: true
 
 FailsafeController:
   address: "mrs_uav_controllers/FailsafeController"
@@ -22,6 +24,13 @@ FailsafeController:
 EmergencyController:
   address: "mrs_uav_controllers/MpcController"
   namespace: "emergency_controller"
+  eland_threshold: 3.0 # [m], position error triggering eland
+  failsafe_threshold: 4.0 # [m], position error triggering failsafe land
+  odometry_innovation_threshold: 3.0 # [m], position odometry innovation threshold
+
+MidairActivationController:
+  address: "mrs_uav_controllers/MidairActivationController"
+  namespace: "midair_activation_controller"
   eland_threshold: 3.0 # [m], position error triggering eland
   failsafe_threshold: 4.0 # [m], position error triggering failsafe land
   odometry_innovation_threshold: 3.0 # [m], position odometry innovation threshold
