--- a/config/uav/brus/uav_manager.yaml
+++ b/config/uav/brus/uav_manager.yaml
@@ -1,3 +1,16 @@
+# periodically checks if max height was exceeded
+# if so, retakes control and descends below it
+max_height_checking:
+
+  enabled: false
+
+# periodically checks if min height was exceeded
+# if so, retakes control and descends below it
+min_height_checking:
+
+  enabled: false
+  min_height: 3.0 # [m]
+
 takeoff:
 
   during_takeoff:
@@ -12,4 +25,11 @@ takeoff:
 
 landing:
 
-  disarm: true
+  landing_tracker: "LandoffTracker"
+  landing_controller: "MpcController"
+
+midair_activation:
+
+  after_activation:
+    controller: "Se3Controller"
+    tracker: "MpcTracker"
