reduce kq gains for x500

--- a/config/uav/x500/gain_manager/gain_manager.yaml
+++ b/config/uav/x500/gain_manager/gain_manager.yaml
@@ -38,7 +38,7 @@ gain_management:
     HECTOR: "supersoft"
     ALOAM: "soft"
     ALOAMGARM: "soft"
-    ALOAMREP: "soft"
+    ALOAMREP: "supersoft"
     BRICK: "supersoft"
     T265: "supersoft"
     OBJECT: "supersoft"
