--- a/config/uav/eaglemk2/control_manager.yaml
+++ b/config/uav/eaglemk2/control_manager.yaml
@@ -1,3 +1,5 @@
 rc_joystick:
 
-  carrot_distance: 2.00 # [m]
+  horizontal_speed: 2.00 # [m/s]
+  vertical_speed: 1.00 # [m/s]
+  heading_rate: 0.20 # [rad/s]
