--- a/config/default/trackers.yaml
+++ b/config/default/trackers.yaml
@@ -14,6 +14,10 @@ JoyTracker:
 MatlabTracker:
   address: "mrs_uav_trackers/MatlabTracker"
 
+LiteTracker:
+  address: "mrs_uav_trackers/LiteTracker"
+  human_switchable: true
+
 SpeedTracker:
   address: "mrs_uav_trackers/SpeedTracker"
 
