default gain manager: allow supersoft gains for aloam estimators

--- a/config/uav/naki/gain_manager/gain_manager.yaml
+++ b/config/uav/naki/gain_manager/gain_manager.yaml
@@ -12,9 +12,9 @@ gain_management:
     VSLAM: ["supersoft", "soft"]
     BRICKFLOW: ["supersoft", "soft"]
     HECTOR: ["soft"]
-    ALOAM: ["soft"]
-    ALOAMGARM: ["soft"]
-    ALOAMREP: ["soft"]
+    ALOAM: ["supersoft", "soft"]
+    ALOAMGARM: ["supersoft", "soft"]
+    ALOAMREP: ["supersoft", "soft"]
     BRICK: ["supersoft", "soft"]
     T265: ["supersoft", "soft"]
     OBJECT: ["supersoft"]
