added motor controller

--- a/config/default/control_manager.yaml
+++ b/config/default/control_manager.yaml
@@ -15,6 +15,7 @@ controllers : [
   "MpcController",
   "FailsafeController",
   "EmergencyController",
+  "MotorController",
 ]
 
 #- this is the "do nothing tracker", which is active when no other is
