--- a/config/simulation/f450/control_manager.yaml
+++ b/config/simulation/f450/control_manager.yaml
@@ -18,6 +18,7 @@ controllers : [
   "FailsafeController",
   "EmergencyController",
   "MidairActivationController",
+  "MotorController",
 ]
 
 safety:
