ControlManager: +hw mode subscriber, minor refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ include_directories(
 
 add_library(ControlManager
   src/control_manager.cpp
+  src/common/common.cpp
   )
 
 add_dependencies(ControlManager
