getting rid of mavros

--- a/config/default/estimation_manager/estimation_manager.yaml
+++ b/config/default/estimation_manager/estimation_manager.yaml
@@ -9,7 +9,7 @@ frame_id:
 # loaded state estimator plugins
 state_estimators: [
 "gps_garmin",
-# "gps_baro",
+"gps_baro",
 # "rtk",
 # "aloam",
 # "ground_truth",
