--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,7 @@ add_library(EstimationManager
   src/estimation_manager/estimation_manager.cpp
   src/estimation_manager/estimator.cpp
   src/estimation_manager/estimators/state_estimator.cpp
+  src/estimation_manager/estimators/agl_estimator.cpp
   )
 
 add_dependencies(EstimationManager
