--- a/config/default/estimation_manager/estimation_manager.yaml
+++ b/config/default/estimation_manager/estimation_manager.yaml
@@ -16,7 +16,8 @@ state_estimators: [
 # "dummy"
 ]
 
-initial_estimator: "gps_garmin" # will be used as the first estimator
+initial_state_estimator: "gps_garmin" # will be used as the first state estimator
+agl_height_estimator: "garmin_agl" # only slightly filtered height for checking min height (not used in control feedback)
 
 # rates of timers [Hz]
 rate:
