--- a/config/simulation/big_dofec/gain_manager/gain_manager.yaml
+++ b/config/simulation/big_dofec/gain_manager/gain_manager.yaml
@@ -7,45 +7,23 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
-    ICP: ["supersoft", "soft"]
-    VSLAM: ["supersoft", "soft"]
-    BRICKFLOW: ["supersoft", "soft"]
-    HECTOR: ["soft"]
-    ALOAM: ["soft"]
-    ALOAMGARM: ["soft"]
-    ALOAMREP: ["soft"]
-    BRICK: ["supersoft", "soft"]
-    T265: ["supersoft", "soft"]
-    OBJECT: ["supersoft"]
-    VIO: ["supersoft"]
-    LIDAR: ["supersoft"]
-    RTK: ["supersoft"]
-    OPTFLOWGPS: ["supersoft"]
-    GPS: ["supersoft", "soft"]
-    OPTFLOW: ["supersoft"]
-    TOWER: ["supersoft", "soft"]
-    LIOSAM: ["supersoft", "soft"]
-    OTHER: ["supersoft"]
+    gps_garmin: ["supersoft", 'soft']
+    gps_baro: ["supersoft", 'soft']
+    rtk: ["supersoft"]
+    aloam: ["soft"]
+    vio: ["supersoft"]
+    hector: ["soft"]
+    optflow: ["supersoft"]
+    other: ["supersoft"]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
-    ICP: "supersoft"
-    VSLAM: "supersoft"
-    BRICKFLOW: "supersoft"
-    HECTOR: "soft"
-    ALOAM: "soft"
-    ALOAMGARM: "soft"
-    ALOAMREP: "soft"
-    BRICK: "supersoft"
-    T265: "supersoft"
-    OBJECT: "supersoft"
-    VIO: "supersoft"
-    LIDAR: "supersoft"
-    RTK: "supersoft"
-    OPTFLOWGPS: "supersoft"
-    GPS: "supersoft"
-    OPTFLOW: "supersoft"
-    TOWER: "supersoft"
-    LIOSAM: "supersoft"
-    OTHER: "supersoft"
+    gps_garmin: "supersoft"
+    gps_baro: "supersoft"
+    rtk: "supersoft"
+    aloam: "soft"
+    vio: "supersoft"
+    hector: "soft"
+    optflow: "supersoft"
+    other: "supersoft"
